이미지 경로 변경
테스트 서버용으로 변경

--- a/.github/workflows/receive-pr.yml
+++ b/.github/workflows/receive-pr.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build
       - name: Docker build with Dockerfile
-        run: docker build -t woojang1230/github-action-test:latest .
+        run: docker build -t woojang1230/ci-cd-test:latest .
       - name: Docker push
-        run: docker push woojang1230/github-action-test:latest
+        run: docker push woojang1230/ci-cd-test:latest
